Updated version of the manuscript

--- a/Scripts/Manuscript.Rmd
+++ b/Scripts/Manuscript.Rmd
@@ -70,7 +70,7 @@ We coupled the DBEM with the Geophysical Fluid Dynamics Laboratory Earth system 
 
 ## Changes in Stocks Share Ratio
 
-We adopted the concept of threat point as the minimum proportion of the stocks’ joint distribution between neighboring EEZs that each country will accept if they were to cooperate in the management of the stock [@Palacios-Abrantes:E&S]. For each stock and time step (1951-2100) we first aggregate the number of $0.5^{\circ}$ x $0.5^{\circ}$ grid cells where the species was present within neighboring EEZs, and then calculated the proportion that each EEZ had [@Palacios-Abrantes:xxxx]. We then average the results in three time periods in order to reduce climate variability within the projections. The first time period ($t_h$) comprises (1951 - 2005) and is assumed as the historic distribution of each species, thus representing each neighboring nation's threat point. This time frame matches the historic climate data that the GFDL uses to project climate change [@Dunne:2012bo; @Dunne:2013db]. We then selected two future periods; early $21^{st}$ century as the average of 2021 to 2040 ($t_e$), and mid $21^{st}$ century as the average of 2041 to 2060 ($t_m$). We choose these time periods to match the challenges of achieving fisheries-related UN-SDGs [@UnitedNations2018] such as SDG 14.4 (end overfishing) and SDG 1.2 (poverty reduction), aimed to be achieved by 2020 and 2030, respectively [@Singh:2017ds]. We then estimate the percentage change in the SSR of each future time period relative to the historic time period. To address the natural spatial variability of the stock we only considered an  SR change when the future SSR was higher or lower than the average historic SSR $\pm$ 1 s.d. The analysis was replicated for each of the ten ensemble members capturing variation by averaging results among ensemble members (mean $\pm$ standard deviation).
+We adopted the concept of threat point as the minimum proportion of the stocks’ joint distribution between neighboring EEZs that each country will accept if they were to cooperate in the management of the stock [@Palacios-Abrantes:E&S]. For each stock and time step (1951-2100) we first aggregate the number of $0.5^{\circ}$ x $0.5^{\circ}$ grid cells where the species was present within neighboring EEZs, and then calculated the proportion that each EEZ had [@Palacios-Abrantes:xxxx]. We then average the results in three time periods in order to reduce climate variability within the projections. The first time period ($t_h$) comprises (1951 - 2005) and is assumed as the historic distribution of each species, thus representing each neighboring nation's threat point. This time frame matches the historic climate data that the GFDL uses to project climate change [@Dunne:2012bo; @Dunne:2013db]. We then selected two future periods; early $21^{st}$ century as the average of 2021 to 2040 ($t_e$), and mid $21^{st}$ century as the average of 2041 to 2060 ($t_m$). We choose these time periods to match the challenges of achieving fisheries-related UN-SDGs [@UnitedNations2018] such as SDG 14.4 (end overfishing) and SDG 1.2 (poverty reduction), aimed to be achieved by 2020 and 2030, respectively [@Singh:2017ds]. We then estimate the percentage change in the SSR of each future time period relative to the historic time period. To address the natural spatial variability of the stock we only considered a SSR change when the future SSR was higher or lower than the average historic SSR $\pm$ 1 s.d. The analysis was replicated for each of the ten ensemble members capturing variation by averaging results among ensemble members (mean $\pm$ standard deviation).
 
 ## Time of Emergence
 
